$NetBSD: patch-aeson-pretty.cabal,v 1.1 2022/08/23 14:10:52 wiz Exp $

Allow building against hs-aeson 2.1.

--- aeson-pretty.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ aeson-pretty.cabal
@@ -41,7 +41,7 @@ library
         Data.Aeson.Encode.Pretty
 
     build-depends:
-        aeson ^>= 1.0 || ^>=1.1 || ^>=1.2 || ^>=1.3 || ^>=1.4 || ^>=1.5 || ^>=2.0,
+        aeson ^>= 1.0 || ^>=1.1 || ^>=1.2 || ^>=1.3 || ^>=1.4 || ^>=1.5 || ^>=2.0 || ^>=2.1,
         base >= 4.5,
         base-compat >= 0.9,
         bytestring >= 0.9,
