$NetBSD: patch-aeson.cabal,v 1.1 2021/04/23 08:44:05 pho Exp $

Fix build with attoparsec-0.14.*

--- aeson.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ aeson.cabal
@@ -129,7 +129,7 @@ library
 
   -- Other dependencies
   build-depends:
-    attoparsec           >= 0.13.2.2 && < 0.14,
+    attoparsec           >= 0.13.2.2 && < 0.15,
     data-fix             >= 0.3      && < 0.4,
     dlist                >= 0.8.0.4  && < 1.1,
     hashable             >= 1.2.7.0  && < 1.4,
