$NetBSD: patch-aeson.cabal,v 1.3 2022/08/20 20:41:49 wiz Exp $

Allow building against hs-vector 0.14

--- aeson.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ aeson.cabal
@@ -132,7 +132,7 @@ library
     , these                 >=1.1.1.1  && <1.2
     , unordered-containers  >=0.2.10.0 && <0.3
     , uuid-types            >=1.0.5    && <1.1
-    , vector                >=0.12.0.1 && <0.13
+    , vector                >=0.12.0.1 && <0.14
     , witherable            >=0.4.2    && <0.5
 
   ghc-options:      -Wall
