$NetBSD: patch-pandoc.cabal,v 1.1 2020/01/18 02:16:39 pho Exp $

Relax the upper bound on doclayout.

--- pandoc.cabal.orig	2020-01-05 19:15:21.000000000 +0000
+++ pandoc.cabal
@@ -424,7 +424,7 @@ library
                  case-insensitive >= 1.2 && < 1.3,
                  unicode-transforms >= 0.3 && < 0.4,
                  HsYAML >= 0.2 && < 0.3,
-                 doclayout >= 0.2.0.1 && < 0.3,
+                 doclayout >= 0.2.0.1 && < 0.4,
                  ipynb >= 0.1 && < 0.2,
                  attoparsec >= 0.12 && < 0.14,
                  text-conversions >= 0.3 && < 0.4,
