$NetBSD: patch-pandoc.cabal,v 1.2 2021/04/25 07:50:13 pho Exp $

Fix build with attoparsec-0.14.*
Fix build with haddock-library-1.10.*

--- pandoc.cabal.orig	2021-04-25 04:20:36.106850202 +0000
+++ pandoc.cabal
@@ -438,7 +438,7 @@ library
                  SHA                   >= 1.6      && < 1.7,
                  aeson                 >= 0.7      && < 1.6,
                  aeson-pretty          >= 0.8.5    && < 0.9,
-                 attoparsec            >= 0.12     && < 0.14,
+                 attoparsec            >= 0.12     && < 0.15,
                  base64-bytestring     >= 0.1      && < 1.3,
                  binary                >= 0.7      && < 0.11,
                  blaze-html            >= 0.9      && < 0.10,
@@ -460,7 +460,7 @@ library
                  exceptions            >= 0.8      && < 0.11,
                  file-embed            >= 0.0      && < 0.1,
                  filepath              >= 1.1      && < 1.5,
-                 haddock-library       >= 1.8      && < 1.10,
+                 haddock-library       >= 1.8      && < 1.11,
                  hslua                 >= 1.1      && < 1.4,
                  hslua-module-path     >= 0.1.0    && < 0.2.0,
                  hslua-module-system   >= 0.2      && < 0.3,
