$NetBSD: patch-pandoc.cabal,v 1.4 2022/08/29 15:30:03 wiz Exp $

Allow current pkgsrc dependencies.

--- pandoc.cabal.orig	2022-01-31 19:10:53.000000000 +0000
+++ pandoc.cabal
@@ -454,7 +454,7 @@ library
   build-depends: Glob                  >= 0.7      && < 0.11,
                  JuicyPixels           >= 3.1.6.1  && < 3.4,
                  SHA                   >= 1.6      && < 1.7,
-                 aeson                 >= 0.7      && < 2.1,
+                 aeson                 >= 0.7,
                  aeson-pretty          >= 0.8.9    && < 0.9,
                  array                 >= 0.5      && < 0.6,
                  attoparsec            >= 0.12     && < 0.15,
@@ -481,7 +481,7 @@ library
                  filepath              >= 1.1      && < 1.5,
                  haddock-library       >= 1.10     && < 1.11,
                  hslua                 >= 2.1      && < 2.2,
-                 hslua-aeson           >= 2.1      && < 2.2,
+                 hslua-aeson           >= 2.1,
                  hslua-marshalling     >= 2.1      && < 2.2,
                  hslua-module-path     >= 1.0      && < 1.1,
                  hslua-module-system   >= 1.0      && < 1.1,
