$NetBSD: patch-direct-sqlite.cabal,v 1.1 2022/02/16 09:42:21 pho Exp $

Fix build with semigroups-0.20

--- direct-sqlite.cabal.orig	2020-02-24 08:40:57.000000000 +0000
+++ direct-sqlite.cabal
@@ -55,7 +55,7 @@ library
                     Database.SQLite3.Direct
   build-depends:    base       >= 4.1 && < 5
                   , bytestring >= 0.9.2.1
-                  , semigroups >= 0.18 && < 0.20
+                  , semigroups >= 0.18
                   , text       >= 0.11
   default-language: Haskell2010
   include-dirs:     .
