$NetBSD: patch-sqlite-simple.cabal,v 1.1 2022/02/16 09:43:12 pho Exp $

Fix build with semigroups-0.20

--- sqlite-simple.cabal.orig	2020-03-07 18:59:03.000000000 +0000
+++ sqlite-simple.cabal
@@ -51,7 +51,7 @@ Library
     bytestring >= 0.9,
     containers,
     direct-sqlite >= 2.3.13 && < 2.4,
-    semigroups >= 0.18 && < 0.20,
+    semigroups >= 0.18,
     template-haskell,
     text >= 0.11,
     time,
