$NetBSD: patch-darcs.cabal,v 1.1 2022/02/14 14:45:09 pho Exp $

Fix compatibility with recent libraries.

--- darcs.cabal.orig	2022-02-14 13:04:23.234293940 +0000
+++ darcs.cabal
@@ -415,7 +415,7 @@ Library
     else
       build-depends:  unix >= 2.7.1.0 && < 2.8
 
-    build-depends:    base              >= 4.10 && < 4.15,
+    build-depends:    base              >= 4.10 && < 5,
                       stm               >= 2.1 && < 2.6,
                       binary            >= 0.5 && < 0.11,
                       containers        >= 0.5.6.2 && < 0.7,
@@ -428,27 +428,27 @@ Library
                       html              >= 1.0.1.2 && < 1.1,
                       filepath          >= 1.4.1 && < 1.5.0.0,
                       haskeline         >= 0.7.2 && < 0.9,
-                      memory            >= 0.14 && < 0.16,
-                      cryptonite        >= 0.24 && < 0.28,
+                      memory            >= 0.14,
+                      cryptonite        >= 0.24,
                       base16-bytestring >= 0.1.1.7 && < 1.1,
                       utf8-string       >= 1 && < 1.1,
                       vector            >= 0.11 && < 0.13,
                       tar               >= 0.5 && < 0.6,
                       data-ordlist      == 0.4.*,
-                      attoparsec        >= 0.13.0.1 && < 0.14,
+                      attoparsec        >= 0.13.0.1,
                       zip-archive       >= 0.3 && < 0.5,
                       async             >= 2.0.2 && < 2.3,
-                      constraints       >= 0.11 && < 0.13,
+                      constraints       >= 0.11,
                       unix-compat       >= 0.5 && < 0.6,
-                      bytestring        >= 0.10.6 && < 0.11,
+                      bytestring        >= 0.10.6,
                       old-time          >= 1.1.0.3 && < 1.2,
-                      time              >= 1.5.0.1 && < 1.10,
+                      time              >= 1.5.0.1,
                       text              >= 1.2.1.3 && < 1.3,
                       directory         >= 1.2.7 && < 1.4,
                       temporary         >= 1.2.1 && < 1.4,
                       process           >= 1.2.3.0 && < 1.7,
                       array             >= 0.5.1.0 && < 0.6,
-                      hashable          >= 1.2.3.3 && < 1.4,
+                      hashable          >= 1.2.3.3,
                       mmap              >= 0.5.9 && < 0.6,
                       zlib              >= 0.6.1.2 && < 0.7.0.0,
                       network-uri       >= 2.6 && < 2.8,
