$NetBSD: patch-floskell.cabal,v 1.2 2022/08/29 10:58:27 wiz Exp $

Fix build with optparse-applicative-0.17 and aeson-2.1

--- floskell.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ floskell.cabal
@@ -57,7 +57,7 @@ library
     ghc-options:      -Wall
     build-depends:
         base >=4.9 && <4.17,
-        aeson >=0.11.3.0 && <2.1,
+        aeson >=0.11.3.0 && <2.2,
         attoparsec >=0.13.1.0 && <0.15,
         bytestring >=0.10.8.1 && <0.12,
         containers >=0.5.7.1 && <0.7,
@@ -87,7 +87,7 @@ executable floskell
         directory >=1.2.6.2 && <1.4,
         ghc-prim >=0.5.0.0 && <0.9,
         haskell-src-exts >=1.19 && <1.24,
-        optparse-applicative >=0.12.1.0 && <0.17,
+        optparse-applicative >=0.12.1.0,
         text >=1.2.2.2 && <1.3
 
 test-suite floskell-test
