$NetBSD: patch-fourmolu.cabal,v 1.1 2022/02/16 10:21:51 pho Exp $

Fix build with optparse-applicative-0.17

--- fourmolu.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ fourmolu.cabal
@@ -124,7 +124,7 @@ executable fourmolu
         filepath >=1.2 && <1.5,
         ghc-lib-parser >=9.2 && <9.3,
         gitrev >=1.3 && <1.4,
-        optparse-applicative >=0.14 && <0.17,
+        optparse-applicative >=0.14,
         text >=0.2 && <1.3
 
     if flag(dev)
