$NetBSD: patch-fourmolu.cabal,v 1.2 2022/09/01 09:03:21 wiz Exp $

Fix build with optparse-applicative-0.17 and aeson 2.1

--- fourmolu.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ fourmolu.cabal
@@ -82,7 +82,7 @@ library
     default-language: Haskell2010
     build-depends:
         Diff >=0.4 && <1.0,
-        aeson >=1.4.0.0 && <2.1,
+        aeson >=1.4.0.0,
         ansi-terminal >=0.10 && <1.0,
         base >=4.14 && <5.0,
         bytestring >=0.2 && <0.12,
@@ -124,7 +124,7 @@ executable fourmolu
         filepath >=1.2 && <1.5,
         ghc-lib-parser >=9.2 && <9.3,
         gitrev >=1.3 && <1.4,
-        optparse-applicative >=0.14 && <0.17,
+        optparse-applicative >=0.14,
         text >=0.2 && <1.3
 
     if flag(dev)
