$NetBSD: patch-ListLike.cabal,v 1.1 2022/08/22 10:28:48 wiz Exp $

Allow building with hs-vector 0.14.

--- ListLike.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ ListLike.cabal
@@ -69,7 +69,7 @@ Library
                 ,bytestring >= 0.9.1 && < 0.12
                 ,array      >= 0.3   && < 0.6
                 ,text       >= 0.11  && < 1.3  || == 2.0.*
-                ,vector     >= 0.5   && < 0.13
+                ,vector     >= 0.5   && < 0.14
                 ,dlist      >= 0.7   && < 1.1
                 ,fmlist     >= 0.8   && < 0.10
                 ,utf8-string >= 0.3.1 && < 1.1
