$NetBSD: patch-MonadRandom.cabal,v 1.1 2020/01/11 08:05:40 pho Exp $

Relax the upper bound on primitive

--- MonadRandom.cabal.orig	2018-05-22 03:16:57.000000000 +0000
+++ MonadRandom.cabal
@@ -38,7 +38,7 @@ library
     transformers        >=0.3 && <0.6,
     transformers-compat >=0.4 && <0.7,
     mtl                 >=2.1 && <2.3,
-    primitive           >=0.6 && <0.7,
+    primitive           >=0.6 && <0.8,
     random
   ghc-options:         -Wall
   default-language:    Haskell2010
