$NetBSD: patch-MonadRandom.cabal,v 1.3 2022/02/11 13:28:05 pho Exp $

Fix build with transformers-compat-0.8

--- MonadRandom.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ MonadRandom.cabal
@@ -29,7 +29,7 @@ library
   build-depends:
     base                >=2   && <5,
     transformers        >=0.3 && <0.6,
-    transformers-compat >=0.4 && <0.7,
+    transformers-compat >=0.4 && <0.8,
     mtl                 >=2.1 && <2.3,
     primitive           >=0.6 && <0.8,
     random              >=1.0 && <1.3
