$NetBSD: patch-assoc.cabal,v 1.1 2021/04/23 08:07:25 pho Exp $

Fix build with GHC 9.

--- assoc.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ assoc.cabal
@@ -39,7 +39,7 @@ library
   default-language: Haskell2010
   hs-source-dirs:   src
   build-depends:
-      base        >=4.3   && <4.15
+      base        >=4.3   && <5
     , bifunctors  >=5.5.5 && <5.6
     , tagged      >=0.8.6 && <0.9
 
