$NetBSD: patch-async.cabal,v 1.1 2022/02/11 13:26:15 pho Exp $

Fix build with hashable-1.4

--- async.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ async.cabal
@@ -65,7 +65,7 @@ library
         other-extensions: Trustworthy
     exposed-modules:     Control.Concurrent.Async
     build-depends:       base     >= 4.3     && < 4.17,
-                         hashable >= 1.1.2.0 && < 1.4,
+                         hashable >= 1.1.2.0 && < 1.5,
                          stm      >= 2.2     && < 2.6
 
 test-suite test-async
