$NetBSD: patch-data-fix.cabal,v 1.1 2022/02/11 13:45:53 pho Exp $

Fix build with GHC 9.2

--- data-fix.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ data-fix.cabal
@@ -55,9 +55,9 @@ library
       -Wredundant-constraints -Widentities -Wmissing-export-lists
 
   build-depends:
-      base      >=4.4     && <4.16
+      base      >=4.4     && <5
     , deepseq   >=1.3.0.0 && <1.5
-    , hashable  >=1.2.7.0 && <1.4
+    , hashable  >=1.2.7.0 && <1.5
 
   if impl(ghc <7.6)
     -- for GHC.Generics
