$NetBSD: patch-deepseq-generics.cabal,v 1.2 2021/04/23 11:03:27 pho Exp $

Relax the upper bound on base.

--- deepseq-generics.cabal.orig	2016-01-03 14:45:35.000000000 +0000
+++ deepseq-generics.cabal
@@ -42,7 +42,7 @@ source-repository head
 library
     default-language:    Haskell2010
     exposed-modules:     Control.DeepSeq.Generics
-    build-depends:       base >= 4.5 && < 4.10, ghc-prim >= 0.2 && < 0.6, deepseq >= 1.2.0.1 && < 1.5
+    build-depends:       base >= 4.5 && < 5, ghc-prim >= 0.2 && < 1, deepseq >= 1.2.0.1 && < 1.5
     other-extensions:    BangPatterns, FlexibleContexts, TypeOperators
     ghc-options:         -Wall
 
