$NetBSD: patch-dependent-sum.cabal,v 1.1 2022/02/16 05:06:29 pho Exp $

Fix build with some-1.0.2

--- dependent-sum.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ dependent-sum.cabal
@@ -49,7 +49,7 @@ Library
                       , constraints-extras >= 0.2 && < 0.4
 
   -- tight bounds, so re-exported API is versioned properly.
-  build-depends:        some == 1.0.1.*
+  build-depends:        some >= 1.0.1
 
   if impl(ghc >= 7.2)
     ghc-options:        -trust base
