$NetBSD: patch-echo.cabal,v 1.1 2020/01/18 22:57:04 pho Exp $

Fix build with GHC 8.8

--- echo.cabal.orig	2017-01-31 02:37:53.000000000 +0000
+++ echo.cabal
@@ -39,7 +39,7 @@ library
                        System.IO.Echo.Internal
 
   build-depends:       base    >= 4.3     && < 5
-                     , process >= 1.0.1.1 && < 1.5
+                     , process >= 1.0.1.1 && < 1.7
   if os(windows)
     cpp-options:       "-DWINDOWS"
     build-depends:     mintty >= 0.1 && < 0.2
