$NetBSD: patch-errors.cabal,v 1.1 2022/02/11 13:36:25 pho Exp $

Fix build with transformers-compat-0.7

--- errors.cabal.orig	2018-05-11 16:13:45.000000000 +0000
+++ errors.cabal
@@ -28,7 +28,7 @@ Library
         exceptions          >= 0.6   && < 0.11,
         text                            < 1.3 ,
         transformers        >= 0.2   && < 0.6 ,
-        transformers-compat >= 0.4   && < 0.7
+        transformers-compat >= 0.4   && < 0.8
     if impl(ghc <= 7.6.3)
         Build-Depends:
             safe            >= 0.3.3 && < 0.3.10
